# dns_spider

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: architecture.md
src/: error.rs  main.rs
src/async_rt/: executor.rs
src/capture/: dpdk.rs  mod.rs  pcap.rs  xdp.rs
src/core/: dpdk.rs  driver.rs  mempool.rs  mod.rs  stats.rs
src/output/: console.rs  file.rs  kafka.rs  mod.rs  statsd.rs
src/protocols/: detect.rs  mod.rs
src/protocols/dns/: doh.rs  doq.rs  dot.rs  mod.rs  tcp.rs  udp.rs
src/utils/: macros.rs  simd.rs  time.rs
